tests/ui/parser/issues/issue-62881.rs
fn main() {}

fn f() -> isize { fn f() -> isize {} pub f< //~ ERROR this file contains an unclosed delimiter
